- Update SkattekortClient to use getFirst() for retrieving the first employee's income year. - Enhance BestillingSkattekortStatusMapper to improve error message formatting by using split parts for organization and income year. #deploy-test-dolly-backend